# test-wasm

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
client/: index.html  package-lock.json  package.json
client/public/: style.css
client/src/: main.ts
client/src/assets/css/: style.css
src/: lib.rs  task.rs  utils.rs
tests/: web.rs
